--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ adg
         <li>Mar</li>
         <li>Jan</li>
     </ul>
+    git a
 
     <input class="addText" onfocus="this.value=''" type="text" value="insert text">
     <button class="addListBtn">Add</button>
