--- a/index.html
+++ b/index.html
@@ -26,47 +26,46 @@
             <td>
               <div>
                 <label>No.</label>
-                <input type="number" name="number" min="1" max="100" id="number">
+                <input type="number" name="number" min="1" max="100" id="number" readonly>
               </div>
             </td>
             <td>
               <div>
                 <label>Full Name</label>
-                <input type="text" name="patient" id="pname">
+                <input type="text" name="patient" id="pname" required>
               </div>
             </td>
             <td>
               <div>
                 <label>Date</label>
-                <input type="date" name="date" id="date">
+                <input type="date" name="date" id="date" required>
               </div>
             </td>
-
             <td>
               <div>
                 <label>Time</label>
-                <input type="time" name="time" id="time">
+                <input type="time" name="time" id="time" required>
               </div>
             </td>
 
             <td>
               <div>
                 <label>Temperature &#8451;</label>
-                <input type="number" name="temperature" min="34" max="50" step="0.10" id="temperature" placeholder="34">
+                <input type="number" name="temperature" min="34" max="50" step="0.10" id="temperature" required>
               </div>
             </td>
 
             <td>
               <div>
                 <label>Symptoms</label>
-                <input type="text" name="symptoms" id="symptoms">
+                <input type="text" name="symptoms" id="symptoms" row="2">
               </div>
             </td>
 
             <td id="unique">
               <div>
                 <label>Patient ID</label>
-                <input type="text" name="patientId" id="patientId">
+                <input type="text" name="patientId" id="patientId" readonly>
               </div>
             </td>
 
